modifed polyfit and fixed documentation

--- a/Least Square Monte Carlo Implementation in a Python Class.ipynb
+++ b/Least Square Monte Carlo Implementation in a Python Class.ipynb
@@ -49,30 +49,31 @@
     "\\begin{equation} \\max \\left(K-S_{i,t_n},0\\right) > 0 \\end{equation} \n",
     "\n",
     "\n",
-    "- In order to obtain **continuation values**, we regress the discounted future cash-flows realised from continuing (i.e. **Y** in the lecture notes) onto polynomial of the spot price (i.e. **X** in the lecture notes). The regression is done by using the values from all of the stock price paths. The **continuation value** $\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_n}]$ for a stock price path $i$ with values $S_{i,t_n}$ at time $t_{n}$ is\n",
+    "- In order to obtain **continuation values**, we regress the discounted future cash-flows realised from continuing (i.e. **Y** in the lecture notes) onto polynomial of the spot price (i.e. **X** in the lecture notes) with least square fit. The regression is done by using the values from all of the stock price paths. The **continuation value** $\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_n}]$ for a stock price path $i$ with values $S_{i,t_n}$ at time $t_{n}$ is\n",
     "\n",
-    "\\begin{equation}\\widetilde{\\mathbb{E}}[C_{V,t_{n+1}}*e^{-rdt} \\mid C_{i,t_n}]=\\beta_{0}+\\beta_{1} C_{i,t_n}+\\beta_{2} C_{i,t_n}^{2} + \\beta_{3} C_{i,t_n}^{3} + \\beta_{4} C_{i,t_J}^{4} + \\beta_{5} C_{i,t_n}^{5}\\end{equation}\n",
+    "\\begin{equation}\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_n}]=\\beta_{0}+\\beta_{1} C_{i,t_n}+\\beta_{2} C_{i,t_n}^{2} + \\beta_{3} C_{i,t_n}^{3} + \\beta_{4} C_{i,t_J}^{4} + \\beta_{5} C_{i,t_n}^{5}\\end{equation}\n",
     "\n",
     "\n",
     "\n",
     "- Once we have the **continuation values** and **exercise values** , we will perform early exercise if exercise value is larger than continuation value and obtain the value of the option at discounted to timestamp $t_n$\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{lll}\n",
-    "V_{i,t_{n}} = max(C_{i,t_{n-1}}, \\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_{n-1}}])\\\\\n",
-    "\\end{array}\n",
+    "V_{i,t_{n}} =\n",
+    "\\begin{cases} C_{i,t_{n-1}} & \\text{if } C_{i,t_{n-1}} >\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_{n-1}}]\\\\\n",
+    "        V_{i,t_{n+1}}*e^{-rdt} & \\text{otherwise}\n",
+    "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
     "\n",
     "- We repeat this process for backward one step at a time $t_n$, $n= M-2,\\ldots,1$. At each time-step, we keep the value of the put option discounted to $t_n$, $V_{i,t_{n}}$\n",
     "\n",
     "\n",
-    "- Finally, we take average of $V_{i,t_1} * e^{-rdt}$, i=1..number of simulation and get the value of the option at time 0"
+    "- Finally, we take average of $V_{i,t_1} * e^{rdt}$, i=1..number of simulation and get the value of the option at time 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,8 +150,8 @@
     "        # going backward -1 at a time\n",
     "        # value matrix column t is the cash flow of put option a time t regardless of when it is exercise \n",
     "        for t in range(self.M - 1, 0 , -1):\n",
-    "            regression = np.polyfit(self.MCprice_matrix[t, :], value_matrix[t + 1, :] * self.discount, 5)\n",
-    "            continuation_value = np.polyval(regression, self.MCprice_matrix[t, :])\n",
+    "            regression = np.polynomial.polynomial.polyfit(self.MCprice_matrix[t, :], value_matrix[t + 1, :] * self.discount, 5)\n",
+    "            continuation_value = np.polyval(regression[::-1], self.MCprice_matrix[t, :])\n",
     "            value_matrix[t, :] = np.where(self.MCpayoff[t, :] > continuation_value,\n",
     "                                          self.MCpayoff[t, :],\n",
     "                                          value_matrix[t + 1, :] * self.discount)\n",
@@ -238,17 +239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AmericanPUT = AmericanOptionsLSMC( 36., 40., 1., 50, 0.06, 0.06, 0.2, 10000  )"
+    "AmericanPUT = AmericanOptionsLSMC( 36., 40., 1., 50, 0.06, 0.06, 0.2, 10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 78,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -264,7 +267,7 @@
     }
    ],
    "source": [
-    "AmericanPUT = AmericanOptionsLSMC( 36., 40., 1., 50, 0.06, 0.06, 0.2, 10000  )\n",
+    "AmericanPUT = AmericanOptionsLSMC( 36., 40., 1., 50, 0.06, 0.06, 0.2, 10000)\n",
     "print ('Price: ', AmericanPUT.price)\n",
     "print ('Delta: ', AmericanPUT.delta)\n",
     "print ('Gamma: ', AmericanPUT.gamma)\n",
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +319,7 @@
       "Initial price: 44.0, Sigma: 0.20, Expire: 2.0 --> Option Value    1.646\n",
       "Initial price: 44.0, Sigma: 0.40, Expire: 1.0 --> Option Value    3.838\n",
       "Initial price: 44.0, Sigma: 0.40, Expire: 2.0 --> Option Value    5.438\n",
-      "Duration in Seconds  8.846\n"
+      "Duration in Seconds  8.759\n"
      ]
     }
    ],
