--- a/Least Square Monte Carlo Implementation in a Python Class.ipynb
+++ b/Least Square Monte Carlo Implementation in a Python Class.ipynb
@@ -49,13 +49,13 @@
     "\\begin{equation} \\max \\left(K-S_{i,t_n},0\\right) > 0 \\end{equation} \n",
     "\n",
     "\n",
-    "- In order to obtain **continuation values**, we regress the discounted future cash-flows realised from continuing (i.e. **Y** in the lecture notes) onto polynomial of the spot price (i.e. **X** in the lecture notes) with least square fit. The regression is done by using the values from all of the stock price paths. The **continuation value** $\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_n}]$ for a stock price path $i$ with values $S_{i,t_n}$ at time $t_{n}$ is\n",
+    "- In order to obtain **continuation values**, we regress the discounted future value realised from continuing ($V_{*,t_{n+1}}*e^{-rdt}$) onto polynomial of the spot price ($𝑆_{*,𝑡_𝑛}$) with least square fit. The regression is done by using the values from all of the stock price paths and after which we obtain the coefficients - betas. The **continuation value** $\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_n}]$ for a stock price path $i$ with values $S_{i,t_n}$ at time $t_{n}$ is\n",
     "\n",
-    "\\begin{equation}\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid C_{i,t_n}]=\\beta_{0}+\\beta_{1} C_{i,t_n}+\\beta_{2} C_{i,t_n}^{2} + \\beta_{3} C_{i,t_n}^{3} + \\beta_{4} C_{i,t_J}^{4} + \\beta_{5} C_{i,t_n}^{5}\\end{equation}\n",
+    "\\begin{equation}\\widetilde{\\mathbb{E}}[V_{i,t_{n+1}}*e^{-rdt} \\mid S_{i,t_n}]=\\beta_{0}+\\beta_{1} S_{i,t_n}+\\beta_{2} S_{i,t_n}^{2} + \\beta_{3} S_{i,t_n}^{3} + \\beta_{4} S_{i,t_J}^{4} + \\beta_{5} S_{i,t_n}^{5}\\end{equation}\n",
     "\n",
     "\n",
     "\n",
-    "- Once we have the **continuation values** and **exercise values** , we will perform early exercise if exercise value is larger than continuation value and obtain the value of the option at discounted to timestamp $t_n$\n",
+    "- Once we have the **continuation values** and **exercise values** , we will perform early exercise if exercise value is larger than continuation value and obtain the value of the option discounted to timestamp $t_n$\n",
     "\n",
     "\\begin{equation}\n",
     "V_{i,t_{n}} =\n",
@@ -68,7 +68,7 @@
     "- We repeat this process for backward one step at a time $t_n$, $n= M-2,\\ldots,1$. At each time-step, we keep the value of the put option discounted to $t_n$, $V_{i,t_{n}}$\n",
     "\n",
     "\n",
-    "- Finally, we take average of $V_{i,t_1} * e^{rdt}$, i=1..number of simulation and get the value of the option at time 0"
+    "- Finally, we take average of $V_{i,t_1} * e^{-rdt}$, i=1..number of simulation and get the value of the option at time 0"
    ]
   },
   {
