--- a/Least Square Monte Carlo Implementation in a Python Class.ipynb
+++ b/Least Square Monte Carlo Implementation in a Python Class.ipynb
@@ -10,7 +10,7 @@
     "## About this project\n",
     "\n",
     "\n",
-    "- Team **HO Ngok Chao, GAO Jisan, CHENG Toyuan**\n",
+    "- Team **HO Ngok Chao, GAO Jichen, CHENG Tuoyuan**\n",
     "\n",
     "- **Summary**: This notebook in **Python 3** is to serve as part of the final report together with source code for your project, stating the logic of the derivation of pricing method (if not discussed in class).\n",
     "\n",
